@@ -1,6 +1,8 @@
 package com.gt.genti.responseexample.service;
 
+import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
@@ -31,10 +33,14 @@ public class ResponseExampleService {
 	}
 
 	public List<ExampleWithPictureFindResponseDto> getAllResponseExamples() {
-		return responseExampleRepository.findAllByPromptOnlyIsFalse()
-			.stream()
-			.map(ExampleWithPictureFindResponseDto::new)
-			.toList();
+		List<ExampleWithPictureFindResponseDto> examples = responseExampleRepository.findAllByPromptOnlyIsFalse()
+				.stream()
+				.map(ExampleWithPictureFindResponseDto::new)
+				.collect(Collectors.toList());
+
+		Collections.shuffle(examples);
+
+		return examples;
 	}
 
 	public void addResponseExamples(List<ExampleSaveCommand> commandList,
